<resources>
    <string name="app_name">AndroidLover</string>
    <string name="title_activity_login2">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_email">用户名</string>
    <string name="login_pwd">密码</string>
    <string name="login_register">注册</string>
    <string name="login_forget_pwd">忘记密码</string>
    <string name="login_login">登录</string>
    <string name="register_register">注册</string>
    <string name="register_confirm_pwd">确认密码</string>
    <string name="input_name">Please input your name</string>
    <string name="input_pwd">Please input the password</string>
    <string name="input_confirm_pwd">Please input the confirm password</string>
    <string name="name_exist">The name already exists</string>
    <string name="confirm_pwd_error">The confirm password error</string>
    <string name="register_error">Something error</string>
    <string name="no_network">当前网络不可用</string>
    <string name="set_gesture">手势密码</string>
    <string name="confirm_lock">确认密码</string>
</resources>
